GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Account_Product__c.field-meta.xml
<CustomField>
    <fullName>Account_Product__c</fullName>
    <formula>Intake_Request_Number__r.Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Product</label>
    <type>Text</type>
</CustomField>