GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Communication_Contact_number__c.field-meta.xml
<CustomField>
    <fullName>Communication_Contact_number__c</fullName>
    <label>Follow-up Contact number</label>
    <type>Phone</type>
</CustomField>