GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Department_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Department_Contact_Phone__c</fullName>
    <!--<formula>Provider_Contact__r.Department_Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>-->
    <label>Department Contact Phone</label>
    <type>Text</type>
    <length>255</length>
</CustomField>