GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/External_Note__c.field-meta.xml
<CustomField>
    <fullName>External_Note__c</fullName>
    <label>External Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>