GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Flag_Status__c.field-meta.xml
<CustomField>
    <fullName>Flag_Status__c</fullName>
    <formula>IF( TODAY() &gt;  ActivityDate , (IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Expired&quot;, 10 , 10)), (IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Valid&quot;, 10, 10)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag Status</label>
    <type>Text</type>
</CustomField>