GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Intake_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Request Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>