GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>Internal_Note__c</fullName>
    <label>Internal Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>