GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Is_Owner_A_Queue__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_A_Queue__c</fullName>
    <formula>IF( BEGINS(OwnerId , &apos;00G&apos;)  , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner A Queue?</label>
    <type>Checkbox</type>
</CustomField>