GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/IsValidationBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsValidationBypassed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsValidationBypassed</label>
    <type>Checkbox</type>
</CustomField>