GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Notes_captured__c.field-meta.xml
<CustomField>
    <fullName>Notes_captured__c</fullName>
    <label>Notes captured</label>
    <type>TextArea</type>
</CustomField>