GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Number_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attempts__c</fullName>
    <label>Number of Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>