GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Provider_Fax__c.field-meta.xml
<CustomField>
    <fullName>Provider_Fax__c</fullName>
    <label>Provider Fax</label>
    <type>Phone</type>
</CustomField>