GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <!--<formula>Provider_Contact__r.Provider_Contact_Name__c</formula>-->
    <label>Provider Contact</label>
    <type>Text</type>
    <length>255</length>
</CustomField>