GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Provider_State__c</fullName>
    <!--<formula>Text(Provider_Contact__r.Address__StateCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>-->
    <label>Provider State</label>
    <type>Text</type>
    <length>255</length>
</CustomField>