GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Reason_for_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Hold__c</fullName>
    <label>Reason for Hold</label>
    <type>TextArea</type>
</CustomField>