GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <formula>Intake_Request_Number__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Date</label>
    <type>DateTime</type>
</CustomField>