GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Service_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Id__c</fullName>
    <formula>WhatId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Request Id</label>
    <type>Text</type>
</CustomField>