GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Spl_Instructions_From_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Spl_Instructions_From_Insurance_Company__c</fullName>
    <label>Spl Instructions From Insurance Company</label>
    <type>TextArea</type>
</CustomField>