GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Processing Review</fullName>
            </value>
            <value>
                <fullName>Fax Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>