GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Todays_Date__c.field-meta.xml
<CustomField>
    <fullName>Todays_Date__c</fullName>
    <formula>today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today&apos;s Date</label>
    <type>Date</type>
</CustomField>