GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Toggle_Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Toggle_Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this flag to allow updates in system mode, but not by user</description>
    <inlineHelpText>Use this flag to allow updates in system mode, but not by user</inlineHelpText>
    <label>Toggle Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>