GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/When_was_the_call_made__c.field-meta.xml
<CustomField>
    <fullName>When_was_the_call_made__c</fullName>
    <label>Follow-up Date Time</label>
    <type>DateTime</type>
</CustomField>