GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Who_answered_for_every_follow_up__c.field-meta.xml
<CustomField>
    <fullName>Who_answered_for_every_follow_up__c</fullName>
    <label>Communicated With</label>
    <type>TextArea</type>
</CustomField>