GloablServices/keshavglobal/force-app/main/default/objects/Activity/fields/Who_called__c.field-meta.xml
<CustomField>
    <fullName>Who_called__c</fullName>
    <label>Created By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>